fix font colors, contrast

--- a/css/index.css
+++ b/css/index.css
@@ -102,7 +102,7 @@ h2 > a {
 .cta_container > p {
   padding: 2em;
   font-size: smaller;
-  color: white;
+  color: #4a4a4a;
 }
 
 .content_container {
